--- a/game.css
+++ b/game.css
@@ -82,6 +82,8 @@ letter-spacing: 3px;
 
 
 .soon{
+
+   padding-bottom: 10;
     text-align: center;
     background-color: #000000;
     color: #d6ffba;
@@ -135,11 +137,124 @@ transition-duration: .35s;
 button:hover {
 box-shadow: rgba(39, 174, 96, .2) 0 6px 12px;
 }
-.upper{
-    background-color: #1e8449;
+
+
+#navbar {
+    overflow: hidden;
+   background: linear-gradient(20deg, #37602e, #3b783a, #6fdb74, #1b7e20);
+   background-size: 200%;
+    padding: 50px 10px;
+    transition: 0.4s;
+    position: fixed;
+    width: 100%;
+    top: 0;
+    z-index: 99;
+  }
+   
+  #navbar a {
+    float: left;
+    color: #fff;
+    text-align: center;
+    padding: 12px 20px;
+    text-decoration: none;
+    font-size: 14px; 
+    text-transform: uppercase;
+    font-weight: bold;
+    line-height: 20px;
+    border-radius: 4px;
+  }
+   
+  #navbar #logo {
+    font-size: 35px;
+    font-weight: bold;
+    transition: 0.4s;
+  }
+   
+  #navbar a:hover {
+    background-color: rgb(0, 0, 0);
+  }
+   
+  #navbar-right {
+    float: right;
+  }
+   
+  @media screen and (max-width: 580px) {
+    #navbar {
+      padding: 20px 10px !important;
+    }
+    #navbar a {
+      float: none;
+      display: block;
+      text-align: left;
+    }
+    #navbar-right {
+      float: none;
+    }
+  }
+
+  /* Add a black background color to the top navigation bar */
+.topnav {
+    overflow: hidden;
+    background-color: transparent;
 }
 
-.info{
+/* Style the links inside the navigation bar */
+.topnav a {
+    float: right;
+    display: block;
+    color: black;
+    text-decoration: none;
+    font-size: 17px;
+}
 
+/* Change the color of links on hover */
+.topnav a:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+/* Style the "active" element to highlight the current page */
+.topnav a.active {
+    background-color: #2196F3;
+    color: white;
+}
+
+/* Style the search box inside the navigation bar */
+.topnav input[type="text"] {
+    float: right;
+    padding: 6px;
+    border: none;
+    margin-top: 8px;
+    margin-right: 16px;
+    font-size: 17px;
+}
+
+/* When the screen is less than 600px wide, stack the links and the search field vertically instead of horizontally */
+@media screen and (max-width: 600px) {
+    .topnav a,
+    .topnav input[type="text"] {
+        float: none;
+        display: block;
+        text-align: left;
+        width: 100%;
+        margin: 0;
+        padding: 14px;
+    }
+    .topnav input[type="text"] {
+        border: 1px solid #ccc;
+    }
+}
+.info{
     color: #d6ffba;
+    padding-top: 100;
+}
+.game{
+    text-align: center;
+    padding-top: 200;
+}
+.tut{
+    padding-top: 200;
+}
+.boxg{
+    padding-top: 200;
 }
