--- a/game.css
+++ b/game.css
@@ -271,6 +271,7 @@ box-shadow: rgba(39, 174, 96, .2) 0 6px 12px;
 .gallery{
   padding-top: 200;
   color: #d6ffba;
+  text-align: center;
 }
 
 .wait{
